# deepseek-law-finetune

./: .gitignore  =2.4.0  README.md  pyproject.toml  requirements.txt  run_ds_finetune_pipeline.sh  set_env.sh
ds_r1_law_1.5B_exp4_base/: README.md  adapter_config.json
ds_r1_law_1.5B_exp4_merged/: config.json  tokenizer_config.json
src/ds_finetune/: __init__.py  assets.py  cli.py  config.py  data.py  evaluate.py  modeling.py  prompts.py  train.py
tools/: finetune_data_process.py
unsloth_compiled_cache/: UnslothAlignPropTrainer.py  UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDDPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothIterativeSFTTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py
wandb/: latest-run
wandb/offline-run-20251111_122352-7qs7vzwc/: run-7qs7vzwc.wandb
wandb/offline-run-20251111_123756-0cezs50n/: run-0cezs50n.wandb
wandb/offline-run-20251111_123756-0cezs50n/files/: requirements.txt
